force-app/main/default/objects/Appointment_Email_Config__mdt/Appointment_Email_Config__mdt.object-meta.xml
<CustomObject>
    <label>Appointment Email Config</label>
    <pluralLabel>Appointments Email Config</pluralLabel>
</CustomObject>