force-app/main/default/objects/Appointment_Email_Config__mdt/fields/Appointment_Size__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Size__c</fullName>
    <description>Duração do Service Appointment</description>
    <label>Appointment Size</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>