force-app/main/default/objects/Appointment_Email_Config__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Casa de Banho</fullName>
                <default>true</default>
                <label>Casa de Banho</label>
            </value>
            <value>
                <fullName>Cozinha</fullName>
            </value>
            <value>
                <fullName>Janelas</fullName>
            </value>
            <value>
                <fullName>Roupeiros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>