force-app/main/default/objects/Appointment_Email_Config__mdt/fields/Project_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Display_Name__c</fullName>
    <label>Project Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>