force-app/main/default/objects/Appointment_Email_Config__mdt/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <label>Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>