force-app/main/default/objects/Appointment_Email_Config__mdt/fields/WorkTypeName__c.field-meta.xml
<CustomField>
    <fullName>WorkTypeName__c</fullName>
    <label>Work Type Name</label>
    <type>TextArea</type>
</CustomField>